Azure-Governance-Solutions/Labs-Diagramas/Labs/Nova pasta/azuredeploy305rgc.json
{
    "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json",
    "contentVersion": "1.0.0.0",
    "parameters": {
      "vmssName": {
        "type": "string",
        "defaultValue": "az30305c-",
        "metadata": {
          "description": "String used as a base for naming resources. Must be 3-57 characters in length and globally unique across Azure. A hash is prepended to this string for some resources, and resource-specific information is appended."
        },
        "maxLength": 57
      },
      "instanceCount": {
        "type": "int",
        "defaultValue": 2,
        "maxValue": 5,
        "metadata": {
          "description": "Number of VM instances to provision (5 or less)"
        }
      },
      "adminUsername": {
        "type": "string",
        "metadata": {
          "description": "Windows admin username"
        }
      },
      "adminPassword": {
        "type": "securestring",
        "metadata": {
          "description": "Windows admin password"
        }
      },
      "vmSize": {
        "type": "string",
        "defaultValue": "Standard_D2s_v3",
        "metadata": {
          "description": "VM size"
        }
      },
      "diskType": {
        "type": "string",
        "defaultValue": "Standard_LRS",
        "allowedValues": [
          "StandardSSD_LRS",
          "Standard_LRS",
          "Premium_LRS"
        ],
        "metadata": {
          "description": "disk storage type"
        }
      }
    },
    "variables": {
      "namingPrefix": "[toLower(substring(concat(parameters('vmssName'), uniqueString(resourceGroup().id)), 0, 9))]",
      "addressPrefix": "10.3.0.0/22",
      "subnet0Prefix": "10.3.0.0/24",
      "subnet0Name": "web",
      "appGwSubnetPrefix": "10.3.1.0/24",
      "appGwSubnetName": "appgw",
      "appGwSubnetID": "[resourceId('Microsoft.Network/virtualNetworks/subnets', variables('virtualNetworkName'), variables('appGwSubnetName'))]",
      "virtualNetworkName": "[concat(variables('namingPrefix'), 'vnet')]",
      "webNetworkSecurityGroupName": "[concat(variables('namingPrefix'), 'web-nsg')]",
      "nicName": "[concat(variables('namingPrefix'), 'nic')]",
      "ipConfigName": "[concat(variables('namingPrefix'), 'ipconfig')]",
      "appGwPublicIPAddressName": "[concat(variables('namingPrefix'), 'appgwpip')]",
      "appGwName": "[concat(variables('namingPrefix'), 'appgw')]",
      "appGwPublicIPAddressID": "[resourceId('Microsoft.Network/publicIPAddresses',variables('appGwPublicIPAddressName'))]",
      "appGwID": "[resourceId('Microsoft.Network/applicationGateways',variables('appGwName'))]",
      "appGwFrontendPort": 80,
      "appGwBackendPort": 80,
      "appGwBePoolName": "[concat(variables('namingPrefix'), 'appGwBepool')]",
      "storageAccountName": "[concat('az30005c', uniqueString(subscription().subscriptionId,resourceGroup().id, deployment().name))]",
      "storageAccountType": "[parameters('diskType')]",
      "vmssExtensionName": "customScriptExtension",
      "windowsImage": {
        "publisher": "MicrosoftWindowsServer",
        "offer": "WindowsServer",
        "sku": "2019-Datacenter-Core",
        "version": "latest"
      },
      "computeAPIVersion": "2019-07-01",
      "networkAPIVersion": "2019-11-01",
      "storageAPIVersion": "2019-06-01"
    },
    "resources": [
      {
        "type": "Microsoft.Storage/storageAccounts",
        "name": "[variables('storageAccountName')]",
        "apiVersion": "[variables('storageAPIVersion')]",
        "location": "[resourceGroup().location]",
        "sku": {
          "name": "[variables('storageAccountType')]"
        },
        "kind": "Storage",
        "properties": {}
      },
      {
        "type": "Microsoft.Network/networkSecurityGroups",
        "name": "[variables('webNetworkSecurityGroupName')]",
        "apiVersion": "[variables('networkAPIVersion')]",
        "location": "[resourceGroup().location]",
        "properties": {
          "securityRules": [
            {
              "name": "custom-allow-rdp",
              "properties": {
                "priority": 1000,
                "sourceAddressPrefix": "*",
                "protocol": "Tcp",
                "destinationPortRange": "3389",
                "access": "Allow",
                "direction": "Inbound",
                "sourcePortRange": "*",
                "destinationAddressPrefix": "*"
              }
            },
            {
              "name": "custom-allow-http",
              "properties": {
                "priority": 1100,
                "sourceAddressPrefix": "*",
                "protocol": "Tcp",
                "destinationPortRange": "80",
                "access": "Allow",
                "direction": "Inbound",
                "sourcePortRange": "*",
                "destinationAddressPrefix": "*"
              }
            }
          ]
        }
      },
      {
        "type": "Microsoft.Network/virtualNetworks",
        "name": "[variables('virtualNetworkName')]",
        "apiVersion": "[variables('storageAPIVersion')]",
        "location": "[resourceGroup().location]",
        "dependsOn": [
          "[variables('webNetworkSecurityGroupName')]"
        ],
        "properties": {
          "addressSpace": {
            "addressPrefixes": [
              "[variables('addressPrefix')]"
            ]
          },
          "subnets": [
            {
              "name": "[variables('subnet0Name')]",
              "properties": {
                "addressPrefix": "[variables('subnet0Prefix')]",
                "networkSecurityGroup": {
                  "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('webNetworkSecurityGroupName'))]"
                }
              }
            },
            {
              "name": "[variables('appGwSubnetName')]",
              "properties": {
                "addressPrefix": "[variables('appGwSubnetPrefix')]"
              }
            }
          ]
        }
      },
      {
        "type": "Microsoft.Network/publicIPAddresses",
        "name": "[variables('appGwPublicIPAddressName')]",
        "apiVersion": "[variables('storageAPIVersion')]",
        "location": "[resourceGroup().location]",
        "sku": {
          "name": "Standard"
        },
        "properties": {
          "publicIPAllocationMethod": "Static"
        }
      },
      {
        "type": "Microsoft.Network/applicationGateways",
        "name": "[variables('appGwName')]",
        "apiVersion": "[variables('storageAPIVersion')]",
        "location": "[resourceGroup().location]",
        "zones": [
          "1",
          "2",
          "3"
        ],
        "dependsOn": [
          "[concat('Microsoft.Network/virtualNetworks/', variables('virtualNetworkName'))]",
          "[concat('Microsoft.Network/publicIPAddresses/', variables('appGwPublicIPAddressName'))]"
        ],
        "properties": {
          "sku": {
            "name": "Standard_v2",
            "tier": "Standard_v2"
          },
          "autoscaleConfiguration": {
            "minCapacity": 1,
            "maxCapacity": 2
          },
          "gatewayIPConfigurations": [
            {
              "name": "appGwIpConfig",
              "properties": {
                "subnet": {
                  "id": "[variables('appGwSubnetID')]"
                }
              }
            }
          ],
          "frontendIPConfigurations": [
            {
              "name": "appGwFrontendIP",
              "properties": {
                "PublicIPAddress": {
                  "id": "[variables('appGwPublicIPAddressID')]"
                }
              }
            }
          ],
          "frontendPorts": [
            {
              "name": "appGwFrontendPort",
              "properties": {
                "Port": "[variables('appGwFrontendPort')]"
              }
            }
          ],
          "backendAddressPools": [
            {
              "name": "[variables('appGwBePoolName')]"
            }
          ],
          "backendHttpSettingsCollection": [
            {
              "name": "appGwBackendHttpSettings",
              "properties": {
                "Port": "[variables('appGwBackendPort')]",
                "Protocol": "Http",
                "CookieBasedAffinity": "Disabled"
              }
            }
          ],
          "httpListeners": [
            {
              "name": "appGwHttpListener",
              "properties": {
                "FrontendIPConfiguration": {
                  "Id": "[concat(variables('appGwID'), '/frontendIPConfigurations/appGwFrontendIP')]"
                },
                "FrontendPort": {
                  "Id": "[concat(variables('appGwID'), '/frontendPorts/appGwFrontendPort')]"
                },
                "Protocol": "Http",
                "SslCertificate": null
              }
            }
          ],
          "requestRoutingRules": [
            {
              "Name": "rule1",
              "properties": {
                "RuleType": "Basic",
                "httpListener": {
                  "id": "[concat(variables('appGwID'), '/httpListeners/appGwHttpListener')]"
                },
                "backendAddressPool": {
                  "id": "[concat(variables('appGwID'), '/backendAddressPools/', variables('appGwBePoolName'))]"
                },
                "backendHttpSettings": {
                  "id": "[concat(variables('appGwID'), '/backendHttpSettingsCollection/appGwBackendHttpSettings')]"
                }
              }
            }
          ]
        }
      },
      {
        "type": "Microsoft.Compute/virtualMachineScaleSets",
        "name": "[concat(variables('namingPrefix'),'vmss')]",
        "apiVersion": "[variables('computeApiVersion')]",
        "location": "[resourceGroup().location]",
        "dependsOn": [
          "[concat('Microsoft.Network/virtualNetworks/', variables('virtualNetworkName'))]",
          "[concat('Microsoft.Network/applicationGateways/', variables('appGwName'))]",
          "[concat('Microsoft.Storage/storageAccounts/', variables('storageAccountName'))]"
        ],
        "zones": [
          "1",
          "2",
          "3"
        ],
        "sku": {
          "name": "[parameters('vmSize')]",
          "tier": "Standard",
          "capacity": "[parameters('instanceCount')]"
        },
        "properties": {
          "overprovision": "true",
          "singlePlacementGroup": "true",
          "doNotRunExtensionsOnOverprovisionedVMs": false,
          "zoneBalance": false,
          "platformFaultDomainCount": 5,
          "upgradePolicy": {
            "mode": "Automatic"
          },
          "scaleInPolicy": {
            "rules": [
            "Default"
            ]
          },
          "virtualMachineProfile": {
            "storageProfile": {
              "osDisk": {
                "caching": "ReadWrite",
                "createOption": "FromImage",
                "managedDisk": {
                  "storageAccountType": "[parameters('diskType')]"
                },
                "diskSizeGB": 127
              },
              "dataDisks": [],
              "imageReference": "[variables('windowsImage')]"
            },
            "osProfile": {
              "computerNamePrefix": "[variables('namingPrefix')]",
              "adminUsername": "[parameters('adminUsername')]",
              "adminPassword": "[parameters('adminPassword')]"
            },
            "networkProfile": {
              "networkInterfaceConfigurations": [
                {
                  "name": "[variables('nicName')]",
                  "properties": {
                    "primary": true,
                    "ipConfigurations": [
                      {
                        "name": "[variables('ipConfigName')]",
                        "properties": {
                          "subnet": {
                            "id": "[concat('/subscriptions/', subscription().subscriptionId,'/resourceGroups/', resourceGroup().name, '/providers/Microsoft.Network/virtualNetworks/', variables('virtualNetworkName'), '/subnets/', variables('subnet0Name'))]"
                          },
                          "ApplicationGatewayBackendAddressPools": [
                            {
                              "id": "[concat('/subscriptions/', subscription().subscriptionId,'/resourceGroups/', resourceGroup().name, '/providers/Microsoft.Network/applicationGateways/', variables('appGwName'), '/backendAddressPools/', variables('appGwBePoolName'))]"
                            }
                          ]
                        }
                      }
                    ]
                  }
                }
              ]
            },
            "diagnosticsProfile": {
              "bootDiagnostics": {
              "enabled": true,
              "storageUri": "[reference(resourceId('Microsoft.Storage/storageAccounts/', variables('storageAccountName'))).primaryEndpoints.blob]"
              }
            },
            "extensionProfile": {
              "extensions": [
                {
                  "name": "[variables('vmssExtensionName')]",
                  "properties": {
                    "publisher": "Microsoft.Compute",
                    "type": "CustomScriptExtension",
                    "typeHandlerVersion": "1.7",
                    "autoUpgradeMinorVersion": true,
                    "settings": {
                      "commandToExecute": "powershell.exe Install-WindowsFeature -name Web-Server -IncludeManagementTools && powershell.exe remove-item 'C:\\inetpub\\wwwroot\\iisstart.htm' && powershell.exe Add-Content -Path 'C:\\inetpub\\wwwroot\\iisstart.htm' -Value $('Hello World from ' + $env:computername)"
                    }
                  }
                }
              ]
            }
          }
        }
      }
    ]
  }
